# PyPhysicist

./: .gitignore  Constants.py  Energy.py  LICENSE  README.md  __init__.py  electromagnetism.py  mechanics.py  pyproject.toml  relativity.py  setup.py  thermodynamics.py  waves_optics.py
PyPhysicist/: PyPhysicist.py  __init__.py  latex.py
PyPhysicist/astro_numerics/: __init__.py  core.py
PyPhysicist/astrodynamics/: __init__.py  _utils.py  core.py  dimensionless.py  elements.py  equations.py  invariants.py  limits.py  solutions.py  theorems.py  validation.py
PyPhysicist/combinatorial_dynamics/: __init__.py  core.py
PyPhysicist/constants/: __init__.py  si.py
PyPhysicist/electromagnetism/: __init__.py  circuits.py  electrostatics.py
PyPhysicist/fluids/: __init__.py  constitutive.py  core.py  dimensionless.py  equations.py  solutions.py  theorems.py  validation.py
PyPhysicist/geometry/: __init__.py  tensors.py
PyPhysicist/logic_gates_physics/: __init__.py  propagation.py  quantum_effects.py  thermodynamics.py
PyPhysicist/mechanics/: __init__.py  dynamics.py  energy.py  kinematics.py
configs/: fno_burgers.yml
docs/: api.rst  conf.py  index.rst  usage.rst
scripts/: train_and_eval.py
tests/: conftest.py  test_astrodynamics.py  test_core.py  test_electromagnetism.py  test_energy.py  test_fluids.py  test_geometry.py  test_latex.py  test_mechanics.py  test_optimal_control_rl.py  test_physlearn.py  test_physlearn_ml_core.py  test_quantum_chaos.py  test_relativity.py  test_rocketry.py  test_thermodynamics.py  test_units.py  test_waves_optics.py
(+61 files in other folders)
